# Changelog

Notable changes to the Dungeon Roguelike Game will be documented here.
The formatting is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/)

## [5.0.0] - 2025-3-26

### Added

- Dungeon now prints in ncurses with message and status lines above and
  below the dungeon space, respectively
- --help/-h switch has been added to display the available switches and
  their descriptions
- PC can now be controlled with movement keys
- Pressing Q will now quit the game with a goodbye message
- Pressing m will now show a list of living monsters with their relative
  positions and personalities
- Stairs are now fully functional, generating a random dungeon each time
  and spawning you on the stairs going the opposite direction

### Changed

- Optimizations for performance and error handling

### Fixed

- Incorrectly generating the player-to-monster distances during monster's
  turns
- The monster counter was incorrectly displaying how many monsters were
  still left in the dungeon

## [4.0.0] - 2025-3-5

### Added

- The PC now aimlessly wanders the dungeon in search of an exit to the
  neverending nightmare he cannot escape from
- The dungeon now spawns monsters, between 7 and 20 by default 
  unless specified by the --nummon switch, in a random location inside a 
  room that the player is not in, excluding stairs
- Monsters roam the dungeon based on their randomly generated personality
- When a character walks where another character is, the character that
  was already there now dies and prints that they have died and ends the
  game if it was the player
- Switch --montype which takes a char and will make a dungeon with only
  one monster in it, which is that type
- Exhaustive error checking and memory freeing, so now all heap blocks
  are completely freed

### Changed

- Better error checking for switches and load/save functions
- Printing the dungeon now displays the monster's location,