@@ -1,3 +1,3 @@
 #pragma once
 
-int generateDistances();
+int generateDistances(int x, int y);
